<resources>
    <string name="app_name">FiraBaseTest</string>
    <string name="create_a_new_account">Create a new Account</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--************************************************************-->
    <string name="my_facebook_id">898000400409074</string>
    <!--************************************************************-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="enter_message">please enter a message to send</string>
    <string name="hello">Hello</string>
    <string name="type_a_message">Type a message...</string>
    <string name="branch_chatList">ChatList</string>
    <string name="user_name">User Name</string>
    <string name="fixed_user_name">User name </string>
    <string name="login">Login</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="search">Search...</string>
    <string name="enter_mail">Enter your email</string>
    <string name="disc_reset_password">If you press reset you will receive an email to reset your password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="chat_duck">Duck Chat</string>
    <string name="photos">Photos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="birthday">Birthday</string>
    <string name="_01_10_1993">01/10/1993</string>
    <string name="follow">Follow</string>
    <string name="register">REGISTER</string>
    <string name="home">Home</string>
    <string name="users">Users</string>
    <string name="upload">Upload</string>
    <string name="profile">Profile</string>
    <string name="userId">userID</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="txt_default">default</string>
    <string name="activities">Activities</string>
    <string name="send">Send</string>
    <string name="direct">Direct</string>
    <string name="camera">Camera</string>

</resources>
