<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    >


    <TextView
        android:id="@+id/post_count_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="174"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txt_post_count"
        app:layout_constraintEnd_toEndOf="@+id/txt_post_count"
        />

    <TextView
        android:id="@+id/txt_post_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/posts"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_count_num"
        app:layout_constraintEnd_toStartOf="@+id/txt_followers_count"
        />


    <TextView
        android:id="@+id/followers_count_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="287"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/post_count_num"
        app:layout_constraintStart_toStartOf="@+id/txt_followers_count"
        app:layout_constraintEnd_toEndOf="@+id/txt_followers_count"
        />

    <TextView
        android:id="@+id/txt_followers_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/followers"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/txt_post_count"
        app:layout_constraintTop_toBottomOf="@+id/followers_count_num"
        app:layout_constraintEnd_toStartOf="@+id/txt_following_count"
        />


    <TextView
        android:id="@+id/following_count_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="686"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/post_count_num"
        app:layout_constraintStart_toStartOf="@+id/txt_following_count"
        app:layout_constraintEnd_toEndOf="@+id/txt_following_count"
        />


    <TextView
        android:id="@+id/txt_following_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/following"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/following_count_num"
        app:layout_constraintStart_toEndOf="@+id/txt_followers_count"
        app:layout_constraintEnd_toEndOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>