<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <include android:id="@+id/toolbar_profile_activity"
        layout="@layout/toolbar_profile_activity"/>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <android.support.constraint.Guideline
                    android:id="@+id/g.line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent=".5"/>


                <ImageButton
                    android:id="@+id/img_btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txt_profile" />


                <TextView
                    android:id="@+id/txt_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/profile"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_profile_frahmentProfile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_profile" />

                <TextView
                    android:id="@+id/txt_change_profileImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:padding="4dp"
                    android:text="Change profile photo"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@id/img_profile_frahmentProfile"
                    app:layout_constraintStart_toStartOf="@id/img_profile_frahmentProfile"
                    app:layout_constraintTop_toBottomOf="@+id/img_profile_frahmentProfile"
                    android:visibility="gone"/>


<!--**********************************************************************-->
                <!--User name-->
                <TextView
                    android:id="@+id/fixed_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginTop="15dp"

                    android:text="@string/fixed_user_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/g.line"
                    app:layout_constraintBottom_toTopOf="@id/view_below_userName"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:id="@+id/txt_userName_profileActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/user_name"
                    android:textSize="15sp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/fixed_userName"
                    app:layout_constraintTop_toTopOf="@id/fixed_userName"
                    app:layout_constraintBottom_toBottomOf="@id/fixed_userName"
                    tools:ignore="RtlCompat" />


                <EditText
                    android:id="@+id/editText_username_profileActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toEndOf="@id/fixed_userName"
                    app:layout_constraintTop_toTopOf="@id/fixed_userName"
                    app:layout_constraintBottom_toBottomOf="@id/fixed_userName"
                    android:visibility="gone"
                    tools:ignore="RtlCompat" />

                <View
                    android:id="@+id/view_below_userName"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/fixed_userName"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


<!--***************************************************************************************-->
                <!--Email-->
               <TextView
                    android:id="@+id/fixed_email_cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                   android:layout_marginTop="10dp"
                   android:layout_marginBottom="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="Email "
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toTopOf="@id/view_below_email"
                    app:layout_constraintTop_toBottomOf="@id/view_below_userName" />


                <TextView
                    android:id="@+id/email_cardView_profileActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Email@gmail.com"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@id/txt_userName_profileActivity"
                    app:layout_constraintTop_toTopOf="@id/fixed_email_cardView"
                    app:layout_constraintBottom_toBottomOf="@id/fixed_email_cardView" />

                <View
                    android:id="@+id/view_below_email"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/fixed_email_cardView"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />


                <!--***************************************************************************************-->
             <!--Bithday-->
                <TextView
                    android:id="@+id/_fixed_txt_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/birthday"
                    android:textColor="@color/colorPrimaryDark"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_below_email"/>

                <TextView
                    android:id="@+id/txt_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/_01_10_1993"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="@id/txt_userName_profileActivity"
                    app:layout_constraintTop_toTopOf="@id/_fixed_txt_birthday"
                    app:layout_constraintBottom_toBottomOf="@id/_fixed_txt_birthday" />


                <ImageButton
                    android:id="@+id/img_btn_calender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="3dp"
                    android:background="@drawable/ic_date"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@id/_fixed_txt_birthday"
                    app:layout_constraintBottom_toBottomOf="@id/_fixed_txt_birthday"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:visibility="gone"
                    tools:ignore="RtlCompat" />

                <View
                    android:id="@+id/view_below_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/_fixed_txt_birthday"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

<!--***************************************************************************************-->



                <Button
                    android:id="@+id/btn_update_profileActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_shape_update"
                    android:text="Update"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_cancel_profileActivity"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    />

                <Button
                    android:id="@+id/btn_cancel_profileActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_shape_cancel"
                    android:text="Cancel"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_update_profileActivity"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"
                    />

            </android.support.constraint.ConstraintLayout>




</android.support.v7.widget.LinearLayoutCompat>